syntax = "proto3";

import "common.proto";

option java_package = "com.hymnsmobile.hymnalnet.models";
option java_multiple_files = true;

message HymnalNet {
  map<string, Hymn> hymns = 1;
  repeated PipelineError errors = 2;
}

message Hymn {
  string title = 1;
  repeated Verse lyrics = 2;
  repeated MetaDatum meta_data = 3;
}

message Verse {
  string verse_type = 1;
  repeated string verse_content = 2;
  repeated string transliteration = 3;
}

message MetaDatum {
  string name = 1;
  repeated Datum data = 2;
}

message Datum {
  string value = 1;
  string path = 2;
}
